--- a/public/admin-side/receptionist/walkinbooking.html
+++ b/public/admin-side/receptionist/walkinbooking.html
@@ -362,7 +362,7 @@
                             <span>Payments</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+               <!-- <li class="nav-item">
                         <a class="nav-link" href="cancellation.html" data-tooltip="Cancellation">
                             <i class="fas fa-ban"></i>
                             <span>Cancellation</span>
@@ -373,7 +373,7 @@
                             <i class="fas fa-redo"></i>
                             <span>Rebooking</span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
                 
                 <ul class="nav flex-column secondary-nav">
